kubernetes/ai/litellm.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: litellm
  namespace: ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: litellm
  template:
    metadata:
      labels:
        app: litellm
    spec:
      containers:
      - name: litellm
        image: ghcr.io/berriai/litellm:main-latest
        imagePullPolicy: Always
        args: ["--config", "/app/config.yaml", "--port", "4000"]
        ports:
        - containerPort: 4000
        volumeMounts:
        - mountPath: /app/config.yaml
          name: litellm-config
          subPath: config.yaml
      volumes:
      - name: litellm-config
        configMap:
          name: litellm-config
---
apiVersion: v1
kind: Service
metadata:
  name: litellm
  namespace: ai
spec:
  selector:
    app: litellm
  ports:
    - port: 4000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: litellm
  namespace: ai
spec:
  hostnames:
  - litellm.bgalhardo.internal
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: internal
    sectionName: https
    namespace: system
  rules:
  - backendRefs:
    - name: litellm
      port: 4000
    matches:
    - path:
        type: PathPrefix
        value: /
