kubernetes/ai/openwebui.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openwebui
  namespace: ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openwebui
  template:
    metadata:
      labels:
        app: openwebui
    spec:
      containers:
      - name: openwebui
        image: ghcr.io/open-webui/open-webui:main
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: openwebui
  namespace: ai
spec:
  selector:
    app: openwebui
  ports:
    - port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openwebui
  namespace: ai
spec:
  hostnames:
  - openwebui.bgalhardo.internal
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: internal
    sectionName: https
    namespace: system
  rules:
  - backendRefs:
    - name: openwebui
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
